--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <hr size="3" color="black">
 
     <h1>Contact ME Form</h1>
-    <form class="" action="index.html" method="post" enctype="text/plain">
+    <form class="" action="mailto:tanish.koul123@gmail.com" method="post" enctype="text/plain">
       <label for="">Your name=</label>
       <input type="text" name="Your name" value="">
       <br>
